# ComfyUI-CustomNodePacks

./: .gitignore  CHANGELOG.md  FEATURES_ROADMAP.md  NODE_REFERENCE.md  NOTICE  NOTICE.md  PHASE3_VERIFICATION_REPORT.md  README.md  __init__.py  dependency_checker.py  folder_incrementer.py  pyproject.toml  requirements.txt
THIRD_PARTY_LICENSES/: PromptRelay-NOTICE.txt  SAM3-LICENSE.txt
_AUDIT/: theme_sweep_report.md
c2c_ai/: __init__.py  api_routes.py  bootstrap.py  cost_meter.py  gguf_registry.py  import_heal.py  keychain.py  policy.py  redactor.py  router.py  types.py
docs/: README.md  ai-spine.md  anamorphic-par.md  face-fixer.md  live-preview.md  mask-matting-pipeline.md  paint-suite.md  propainter.md  utility-nodes.md  video-frame-player.md  video-stabilizer.md  wan-director.md
example_workflows/: mask_matting_sam2_vitmatte.json  master_workflow.json
js/: C2C_status_strip.js  _c2c_actions.js  _c2c_ai_client.js  _c2c_consent.js  _c2c_i18n.js  _c2c_lite.js  _c2c_native_offsets.js  _c2c_prompts.js  _c2c_report.js  _c2c_settings_grouping.js  _c2c_settings_shim.js  _c2c_theme.js  _c2c_top_dock.js  _c2c_ui_kit.js  _c2c_undo.js  _c2c_window.js  _editor_empty_state.js  _frame_finder.js  _mode_gate.js  _subgraph_walk.js  _vue_canvas.js  _wan_director_ui.js  _widget_visibility.js  c2c_ab_canvas.js  c2c_ab_canvas.js.bak_pregodlevel  c2c_ai_diagnose.js  c2c_ai_error_translator.js  c2c_ai_explainer.js  c2c_ai_settings.js  c2c_ai_status_bar.js  c2c_ai_workflow_builder.js  c2c_auto_connector.js  c2c_autocheckpoint.js  c2c_autoconnect.js  c2c_autolayout.js  c2c_batch_runner.js  c2c_bulk_edit.js  c2c_celebrations.js  c2c_clipboard.js  c2c_colorspace_badges.js  (+147 more)
nodes/: _c2c_autoconnect.py  _c2c_preset_hub.py  _c2c_preview_guard.py  _c2c_registry.py  _c2c_secrets.py  _control_backends.py  _mask_edge_refine.py  _progress.py  _spline_curves.py  _vendored_resize.py  _video_comparer_io.py  ai_diagnose.py  ai_workflow_builder.py  asymflow_sampler.py  background_remover.py  batch_version_manager.py  bbox_nodes.py  c2c_doctor.py  c2c_int_aggregator.py  c2c_sys_metrics.py  c2c_workflow_library.py  clipboard_tcl.py  cloud_llm.py  control_forge.py  cost_estimator.py  dep_check_routes.py  insight.py  (+75 more)
(+138 files in other folders)
