[project]
name = "comfyui-customnodepacks"
description = "Custom node packs for ComfyUI: FolderIncrementer (auto-versioning) + MaskEditControl (pinpoint mask editing with SAM 2.1 / SAM 3, per-axis erode/expand, point editor, bbox tools, video mask propagation)."
version = "1.22.0"
license = { file = "MIT-License" }
requires-python = ">=3.10"
readme = "README.md"
authors = [{ name = "Code2Collapse" }]
dependencies = [
    "torch>=2.0",
    "torchvision",
    "numpy>=1.24",
    "opencv-python>=4.8",
    "pillow>=10.0",
    "transformers>=4.40",
    "diffusers>=0.27",
    "accelerate",
    "matplotlib",
]

[project.urls]
Repository = "https://github.com/Code2Collapse/ComfyUI-CustomNodePacks"
Issues = "https://github.com/Code2Collapse/ComfyUI-CustomNodePacks/issues"

[tool.comfy]
PublisherId = "Code2Collapse"
DisplayName = "ComfyUI-CustomNodePacks"
Icon = "https://i.pinimg.com/736x/5d/52/19/5d5219ef27c1530bea027ff95d352e05.jpg"