[project]
name = "comfyui-customnodepacks"
description = "Custom node packs for ComfyUI: FolderIncrementer (auto-versioning) + MaskEditControl (pinpoint mask editing with SAM 2.1 / SAM 3, per-axis erode/expand, point editor, bbox tools, video mask propagation)."
version = "2.0.0-dev"
license = { file = "LICENSE" }
requires-python = ">=3.10"
readme = "README.md"
authors = [{ name = "Code2Collapse" }]
dependencies = [
    "torch>=2.0",
    "torchvision",
    "numpy>=1.24",
    "opencv-python>=4.8",
    "pillow>=10.0",
    "transformers>=4.40",
    "diffusers>=0.27",
    "accelerate",
    "matplotlib",
    "httpx>=0.27",
    "keyring>=24.0",
]

[project.optional-dependencies]
ai-cloud = ["anthropic>=0.34", "openai>=1.40"]
ai-local = []  # llama.cpp or Ollama is installed system-wide; no Python deps required

[project.urls]
Repository = "https://github.com/Code2Collapse/ComfyUI-CustomNodePacks"
Issues = "https://github.com/Code2Collapse/ComfyUI-CustomNodePacks/issues"

[tool.comfy]
PublisherId = "code2collapse"
DisplayName = "ComfyUI-CustomNodePacks"
Icon = "https://i.pinimg.com/736x/5d/52/19/5d5219ef27c1530bea027ff95d352e05.jpg"
